--- a/static/popup.html
+++ b/static/popup.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Chrome Extension (built with TypeScript + React)</title>
-        <script src="js/popup.js"></script>
-    </head>
+  <head>
+    <title>LinkedIn Notion Job Connector</title>
+    <script src="js/popup.js"></script>
+  </head>
 
-    <body>
-        <div id="popup"></div>
-    </body>
+  <body>
+    <div id="popup"></div>
+  </body>
 </html>
